--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
 
+<html>
+	<title>	
+	Test
+	</title>
+	
+	<body>	
+		Test
+	</body>
+	<style>
+		body
+		{
+		text-align:center;
+		}
+	</style>
+</html>
