--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
-
+<!DOCTYPE html>
 <html>
 	<title>	
-	Luongg 
+	<meta charset="UTF-8">
+	Lương Nguyễn
 	</title>
 	
 	<body bgcolor="grey">	
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe><br><br>
 		<font face="Arial" size="4" color=#FF0000>
-			<p><a href="http://steamcommunity.com/id/keenkeenblue/">Steam Link</a></p></font><br><br>
+			<p><a href="http://steamcommunity.com/id/keenkeenblue/">Steam Link</font></a></p><br><br>
 		<font face="Arial" size="2" color=#FF0000>
-			<p><a href="https://steamcommunity.com/tradeoffer/new/?partner=232571558&token=LAeXKnTk">Steam Trade Offer</a></p></font><br><br>
+			<p><a href="https://steamcommunity.com/tradeoffer/new/?partner=232571558&token=LAeXKnTk">Steam Trade Offer</font></a></p><br><br>
 			
 	</body>
 	<style>
