--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 .vid-info .acronym { display: none; }
 }
 </style>
-<title>Untitled Document</title>
+<title>Luong Nguyen</title>
 </head>
 
 <body>
@@ -49,9 +49,9 @@
 </div>
 <script> document.getElementsByTagName('body')[0].classList.add('glitch'); </script>
 <h1 style="text-align:center">"LUONG NGUYEN"</h1>
-	<p><a href="http://steamcommunity.com/id/keenkeenblue/">Steam Link</font></a></p><br><br>
+	<p class="alignCenter"><a href="http://steamcommunity.com/id/keenkeenblue/">Steam Link</font></a></p><br><br>
 		<font face="Arial" size="2" color=#FF0000>
-			<p><a href="https://steamcommunity.com/tradeoffer/new/?partner=232571558&token=LAeXKnTk">Steam Trade Offer</font></a></p><br><br>
+			<p class="alignCenter"><a href="https://steamcommunity.com/tradeoffer/new/?partner=232571558&token=LAeXKnTk">Steam Trade Offer</font></a></p><br><br>
 			
 </body>
 </html>
