--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 <body>
 <div class="video-background">
     <div class="video-foreground">
-      <iframe src="https://www.youtube.com/embed/MhQKe-aERsU?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=MhQKe-aERsU" frameborder="0" allowfullscreen></iframe>
+      <iframe src="<iframe width="560" height="315" src="https://www.youtube.com/embed/GIDoQsQyS0s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>></iframe>
     </div>
 </div>
 <script> document.getElementsByTagName('body')[0].classList.add('glitch'); </script>
 <h1 style="text-align:center">"LUONG NGUYEN"</h1>
-	<p class="alignCenter"><a href="http://steamcommunity.com/id/keenkeenblue/">Steam Link</font></a></p><br><br>
+	<p class="alignCenter"><a href="https://steamcommunity.com/id/iamLuong/">Steam Link</font></a></p><br><br>
 		<font face="Arial" size="2" color=#FF0000>
-			<p class="alignCenter"><a href="https://steamcommunity.com/tradeoffer/new/?partner=232571558&token=LAeXKnTk">Steam Trade Offer</font></a></p><br><br>
+			
 			
 </body>
 </html>
