--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <h2>Computer skills</h2>
                 <p>Microsoft productivity software (Word, Excel, etc), Adobe Creative Suite, Windows</p>
             </dd>
+             <dd class="clear"></dd>
              <dd>
                 <h2>Language</h2>
                 <ul>
