--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <h2>Wong's Store (Founder - Seller)</h2>
                 <ul>
                     <li>Selling games on Steam platform</li>
-                    <li>Selling item Dota2 and CS:GO</li>
+                    <li>Selling items Dota2, Counter-Strike: Global Offensive and PLAYERUNKNOWN'S BATTLEGROUNDS</li>
                     
                 </ul>
             </dd>
