--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				From 2015 - 2018
               <ul>
                     <li>Selling games on Steam platform</li>
-                    <li>Selling item Dota2 and CS:GO</li>
+                    <li>Selling item Dota2, Counter-Strike: Global Offensive and PlayerUnknown's Battlegrounds</li>
                     
                 </ul>
             </dd>
