--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <dt>Hobbies</dt>
             <dd><ul>
                     <li>Board Games</li>
-                    <li>Picnic</li>
+                    <li>Travel</li>
                     <li>Movie</li>
                     
                 </ul></dd>
