--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h1 class="fn">Thanh Lương</h1>
         
             <p>
-                Điện thoại: <span class="tel"><a href="tel:0962282212">0962822212</span><br />
+                Điện thoại: <a class="tel" href="tel:0962282212">0962822212</a></br>
                 Email: <a class="email" href="mailto:luong.npt96@gmail.com">luong.npt96@gmail.com</a>
             </p>
         </div>
