--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         
             <p>
                 Điện thoại: <a class="tel" href="tel:0962282212">0962822212</a></br>
-                Email: <a class="email" href="mailto:luong.npt96@gmail.com">luong.npt96@gmail.com</a>
+                Email: <a class="email" href="mailto:luong.npt96@gmail.com">luong.npt96@gmail.com</a></br>
+                <a href="https://drive.google.com/uc?id=1VBBhkRmW9Fx-SJb_jKluKQwe5ZRHb7Ia&export=download">Tải về CV này</a>
             </p>
         </div>
                 
