--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         #pic { float: right; margin: -30px 0 0 0; }
         h1 { margin: 0 0 16px 0; padding: 0 0 16px 0; font-size: 38px; font-weight: bold; letter-spacing: -2px; border-bottom: 1px solid #999; }
         h2 { font-size: 20px; margin: 0 0 6px 0; position: relative; color: #1d73c9 }
-        h2 span { position: absolute; bottom: 0; right: 0; font-style: italic; font-family: Time new roman; font-size: 16px; color: #1d73c9; font-weight: normal; }
+        h2 span { position: absolute; bottom: 0; right: 0; font-style: italic; font-family: Time new roman; font-size: 18px; color: #1d73c9; font-weight: normal; }
         p { margin: 0 0 16px 0; }
         a { color: #1d73c9; text-decoration: none; border-bottom: 0.1px dotted #999; }
         a:hover { border-bottom-style: solid; color: black; }
@@ -44,7 +44,7 @@
             <p>
                 Điện thoại: <a class="tel" href="tel:0962282212">0962822212</a></br>
                 Email: <a class="email" href="mailto:luong.npt96@gmail.com">luong.npt96@gmail.com</a></br>
-                Tải về CV này: <a href="https://drive.google.com/uc?id=1XcHR1M7-71KRm8Wq0a8ooZro8SvRx3YQ&export=download" target="_blank">Download</a>
+                Tải về CV này: <a href="https://drive.google.com/uc?id=1XcHR1M7-71KRm8Wq0a8ooZro8SvRx3YQ&export=download" target="_blank">Tiếng Việt</a> / <a href="https://drive.google.com/uc?id=1PULgeNczPfKRSzixRTL6_SgXp5sSIeK9&export=download" target="_blank">English</a>
             </p>
         </div>
                 
