--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h1 class="fn"> Nguyễn Phan Thanh Lương</h1>
         
             <p>
-                Điện thoại: <a class="tel" href="tel:0962282212">0962822212</a></br>
+                Điện thoại: <a class="tel" href="tel:0962282212">0962282212</a></br>
                 Email: <a class="email" href="mailto:luong.npt96@gmail.com">luong.npt96@gmail.com</a></br>
                 Tải về CV này: <a href="https://drive.google.com/uc?id=1XcHR1M7-71KRm8Wq0a8ooZro8SvRx3YQ&export=download" target="_blank">Tiếng Việt</a> / <a href="https://drive.google.com/uc?id=1PULgeNczPfKRSzixRTL6_SgXp5sSIeK9&export=download" target="_blank">English</a>
             </p>
@@ -81,7 +81,7 @@
             
             <dt>KINH NGHIỆM LÀM VIỆC</dt>
             <dd>
-                <h2><a href="https://edisonschools.edu.vn/" target="_blank">Trường PTLC Edison Ecopark</a> <span>Nhân viên IT, 03/2021 - Hiện nay</span></h2>
+                <h2><a href="https://edisonschools.edu.vn/" target="_blank">Trường PTLC Edison Ecopark</a> <span>Chuyên viên IT, 03/2021 - Hiện nay</span></h2>
                 <ul>
                     <li>Phụ trách các công việc cài đặt, sữa chữa, bảo trì bảo dưỡng phần cứng, phần mềm máy tính nhân viên, máy tính và các thiết bị điện tử (máy chiếu, hệ thống các loa...)trong phòng học, phòng chức năng</li>
                     <li>Cùng bộ phận IT tiếp nhận các hệ thống IT, thiết bị IT được chuyển giao</li>
