--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
                 
                 <h2> <a href="https://www.facebook.com/3i.arch" target="_blank">3i.arch</a> <span>Thành viên sáng lập, 04/2020 - Hiện nay</span></h2>
                 <ul>
-                    <li>Quản lý, đánh giá tình hình kinh doanh và phát triển công tyChịu trách nhiệm nhân sự bao gồm: quản lý khối văn phòng và điều phối nhân lực cho các công trình</li>
+                    <li>Quản lý, đánh giá tình hình kinh doanh và phát triển công ty</li>
+                    <li>Chịu trách nhiệm nhân sự bao gồm: quản lý khối văn phòng và điều phối nhân lực cho các công trình</li>
                     <li>Góp phần nâng số lượng khách hàng thông qua các chiến lược marketing, và xây dựng các mối quan hệ khách hàng</li>
                     <li>Chịu trách nhiệm nhân sự bao gồm: quản lý khối văn phòng và điều phối nhân lực cho các công trình</li>
                 </ul> 
