--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <h2><a href="https://edisonschools.edu.vn/" target="_blank">Trường PTLC Edison Ecopark</a> <span>Chuyên viên IT, 03/2021 - Hiện nay</span></h2>
                 <ul>
                     <li>Cung cấp hỗ trợ kỹ thuật cho giảng viên và nhân viên về các sự cố phần mềm và phần cứng, bao gồm khắc phục sự cố và sửa chữa hệ thống máy tính, máy in và các thiết bị ngoại vi khác (máy chiếu, hệ thống các loa...)trong phòng học, phòng chức năng.</li>
-                    <li>Cùng bộ phận IT tiếp nhận các hệ thống IT, thiết bị IT được chuyển giao</li>
+                    <li>Cùng bộ phận IT tiếp nhận các hệ thống IT, thiết bị IT được chuyển giao.</li>
                     <li>Cùng bộ phận IT tiếp nhận và chuyển giao các phần mềm và thiết bị mới tới các bộ phận trực tiếp sử dụng.</li>
                     <li>Quản lý các mối quan hệ với nhà cung cấp để đảm bảo giải quyết kịp thời các vấn đề kỹ thuật.</li>
                     <li>Đào tạo giảng viên và nhân viên về các công cụ và phần mềm công nghệ mới, đồng thời cung cấp hỗ trợ liên tục khi cần thiết.</li>
