--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </ul> 
                 <h2> <a href="https://vnanet.vn" target="_blank">Thông Tấn Xã Việt Nam</a> <span>Kỹ sư, 07/2018 - 03/2021</span></h2>
                 <ul>
-                    <li>Cài đặt, hỗ trợ, xử lý sự cố cho người sử dụng</li>
+                    <li>Cài đặt, hỗ trợ, xử lý sự cố cho người sử dụng nhằm phục vụ việc đưa tin bài được nhanh và kịp thời nhất.</li>
                     <li>Bảo trì và cập nhật thiết bị cho nhân viên, bao gồm cài đặt phần mềm mới và nâng cấp phần cứng.</li>
                     <li>Phối hợp với các nhóm biên tập và các phòng ban để triển khai các công cụ và công nghệ mới, chẳng hạn như CMS và các công cụ cộng tác trực tuyến, để cải thiện hiệu quả và năng suất của quy trình làm việc.</li>
                     <li>Chịu trách nhiệm lưu giữ, kiểm, bảo trì, nâng cấp các thiết bị có giá trị cao.</li>
