--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         #pic { float: right; margin: -30px 0 0 0; }
         h1 { margin: 0 0 16px 0; padding: 0 0 16px 0; font-size: 38px; font-weight: bold; letter-spacing: -2px; border-bottom: 1px solid #999; }
         h2 { font-size: 20px; margin: 0 0 6px 0; position: relative; color: #1d73c9 }
-        h2 span { position: absolute; bottom: 0; right: 0; font-style: italic; font-family: Time new roman; font-size: 18px; color: #1d73c9; font-weight: normal; }
+        h2 span { position: absolute; bottom: 0; right: 0; font-style: italic; font-family: Sans-Serif; font-size: 18px; color: #1d73c9; font-weight: normal; }
         p { margin: 0 0 16px 0; }
         a { color: #1d73c9; text-decoration: none; border-bottom: 0.1px dotted #999; }
         a:hover { border-bottom-style: solid; color: black; }
