--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <dt>Education</dt>
             <dd>
                 <h2>Hanoi University of Business and Technology <span>08/2014 - 08/2018</span></h2>
-                     <p>Bachelor of Science in Computer Science</p>
+                     <p>Bachelor of Science in Information Technology</p>
                 <h2>Cisco Certified Network Associate</h2>
                      <p>International technical certificate for network professionals issued by the world's leading network equipment manufacturer Cisco Systems of the United States</p>
             </dd>
