--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                  <dt>ACHIEVEMENTS</dt>
               <dd>
                     <li>Excellent staff in the school year 2021 - 2022</li>
+                   <li>Outstanding staff in the school year 2023 - 2024</li>
            
                 </dd>
           
